Fix atlas cta bottom padding and add more space for hero animation on mobile

--- a/src/components/index-page/CreatorTokens/style.scss
+++ b/src/components/index-page/CreatorTokens/style.scss
@@ -408,6 +408,7 @@
 
     &__atlas-cta {
       margin-top: 64px;
+      padding-bottom: 0;
 
       &__title {
         @include h4;
