--- a/src/components/index-page/Hero/style.scss
+++ b/src/components/index-page/Hero/style.scss
@@ -462,7 +462,7 @@
       }
 
       &__illustration-background {
-        height: 1000px;
+        height: 1500px;
       }
 
       &__illustration-wrapper {
